Agregué un h1 a la página

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>JulioDev</title>
 </head>
 <body>
+    <h1>JulioDev</h1>
     <p>Hola, soy Julio César y soy frontend developer</p>
 </body>
 </html>
